<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/itemNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle" />

        <RatingBar
            android:id="@+id/itemRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"
            android:isIndicator="true"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/itemPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="Next" />

        <Button
            android:id="@+id/borrowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:layout_marginTop="8dp"
            android:text="Borrow" />
    </LinearLayout>
</LinearLayout>